test/files/neg/quasiquotes_typechecksplices.scala
object Test extends App {
  println(s"qwe$foo")
  println(s"qwe${foo*bar}")
}